@@ -31,12 +31,12 @@ public class set_filename_register extends EditAction
 		String actionCommand = evt.getActionCommand();
 		if(actionCommand == null || actionCommand.length() != 1)
 		{
-			view.showStatus(jEdit.getProperty("view.status.set-filename-register"));
+			view.pushStatus(jEdit.getProperty("view.status.set-filename-register"));
 			view.getTextArea().getInputHandler().grabNextKeyStroke(this);
 		}
 		else
 		{
-			view.showStatus(null);
+			view.popStatus();
 
 			char ch = actionCommand.charAt(0);
 			if(ch == '\0')
