@@ -122,7 +122,8 @@ public class CloseDialog extends EnhancedDialog
 				{
 					String path = (String)paths[i];
 					Buffer buffer = jEdit.getBuffer(path);
-					buffer.save(view,null);
+					if(!buffer.save(view,null))
+						return;
 					jEdit._closeBuffer(view,buffer);
 					bufferModel.removeElement(path);
 				}
